--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+  background-color: rgb(22, 189, 189);
+  font-family:Georgia, 'Times New Roman', Times, serif;
+}
+header {
+  background-color: rgb(22, 189, 189);
+  font-size: 25px;
+  padding: 10px;
+  text-align: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  color: white;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  padding: 20px;
+}
+
+p {
+  font-size: 18px;
+  color: #555;
+}
+
+/* Style for each individual donut */
+.donut {
+  border: 1px solid #ddd;
+  background-color: white;
+  border-radius: 8px;
+  margin: 10px;
+  padding: 20px;
+  width: 200px;
+}
+
+h2{
+  margin-left: 40px;
+  color: white;
+  
+}
+
+.donut h3{
+
+  color: rgb(241, 122, 114);
+  background-color: white;
+  text-align: center;
+}
+
+.donut p{
+
+  color: rgb(247, 104, 104);
+  background-color: white;
+}
+
+footer {
+  background-color: rgb(22, 189, 189);
+  padding: 10px;
+  text-align: center;
+  margin-top: auto;
+}
+
+.donut-image {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
 }
